infrastructure/k8s-manifests/auth-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-db-deployment
  labels:
    app: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-db-service
spec:
  type: ClusterIP
  selector:
    app: auth-db
  ports:
  - port: 5432
    targetPort: 5432
