infrastructure/k8s-manifests/cart-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deployment
  labels:
    app: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        # Make sure to replace neyo55 with your actual Docker Hub username!
        image: neyo55/cart-service:df38cac
        imagePullPolicy: Always
        ports:
        - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 3002
    targetPort: 3002
