infrastructure/k8s-manifests/catalog-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-deployment
  labels:
    app: catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: catalog
    spec:
      containers:
      - name: catalog
        image: neyo55/catalog-service:dcb3695
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        # The new block: We give it a baseline (request) and a max limit
        resources:
          requests:
            cpu: "100m" # 100 millicores (10% of a CPU core)
          limits:
            cpu: "250m" # 250 millicores (25% of a CPU core)
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  type: ClusterIP
  selector:
    app: catalog
  ports:
  - port: 3001
    targetPort: 3001
