infrastructure/k8s-manifests/order-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: order      
    spec:
      containers:
      - name: order
        # Ensure you replace 'neyo55' with your actual Docker Hub username if different!
        image: neyo55/order-service:df4b597
        imagePullPolicy: Always
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  type: ClusterIP
  selector:
    app: order
  ports:
  - port: 3003
    targetPort: 3003
