infrastructure/k8s-manifests/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:alpine # We pull the official, lightweight Redis image directly from Docker Hub
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP # Keeps the database strictly internal for security
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
